<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Ledstrip Controller</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings -->

    <string name="settings_ledstrip_header">Ledstrip settings</string>
    <string name="settings_select_ledstrip">Select ledstrip to configure</string>
    <string name="settings_app_header">App settings</string>
    <string name="settings_theme_title">Use dark theme</string>
    <string name="settings_ledstrip_name_title">Change the name of currently selected ledstrip</string>
    <string name="settings_ledstrip_support_patterns_title">Does this ledstrip support patterns?</string>

    <string name="settings_mqtt_header">MQTT settings</string>
    <string name="settings_mqtt_server">Server address</string>
    <string name="settings_mqtt_port">Server port to listen to</string>
    <string name="settings_mqtt_username">Username</string>
    <string name="settings_mqtt_password">Password</string>
    <string name="settings_mqtt_qos">Quality of Service</string>

    <!-- Dialogs -->

    <string name="dialog_title_switch_ledstrip">Switch ledstrip</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_label_name">Ledstrip name</string>
    <string name="dialog_hint_name">Ledstrip 1</string>
    <string name="dialog_text_supports_pattern">Supports pattern</string>
    <string name="dialog_hint_mqtt_topic">ledstripcontroller/ledstrip1</string>
    <string name="dialog_label_topic">MQTT topic</string>

    <!-- Menu -->
    <string name="action_edit_ledstrip">Edit ledstrip</string>
    <string name="action_add_ledstrip">Configure new ledstrip</string>

    <string name="loading_mqtt" tools:ignore="TypographyEllipsis">Connecting to MQTT server...</string>
    <string name="failed_connection">Unable to connect to MQTT server!</string>
    <string name="brightness_label">"Brightness: "</string>
    <string name="ledstrip_switch_label_off">Turn ledstrip on</string>
    <string name="ledstrip_switch_label_on">Turn ledstrip on</string>
    <string name="ledstrip_switch_label">Turn ledstrip off or on</string>
</resources>