<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_name"
        android:labelFor="@id/dialog_name" />

    <EditText
        android:id="@+id/dialog_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint_name"/>

    <Switch
        android:layout_marginTop="16dp"
        android:id="@+id/dialog_supports_pattern"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_text_supports_pattern"/>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_label_topic"
        android:labelFor="@id/dialog_mqtt_topic" />

    <EditText
        android:id="@+id/dialog_mqtt_topic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_hint_mqtt_topic"/>


</LinearLayout>