<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.arneb.ledstripcontroller.MainActivity">

    <item android:id="@+id/action_edit_ledstrip"
        android:orderInCategory="1"
        android:title="@string/action_edit_ledstrip"
        android:icon="@drawable/ic_menu_edit"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_ledstrip"
        android:orderInCategory="2"
        android:title="@string/action_add_ledstrip"
        android:icon="@drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>